--- a/chatapp/src/index.css
+++ b/chatapp/src/index.css
@@ -1,5 +1,5 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Noto Sans;
+  font-family: Noto Sans, system-ui;
 }
